# Chip-Test

./: Cargo.toml
.github/workflows/: pages.yml
apps/chip/: package-lock.json  svelte.config.js
apps/chip/src/lib/components/: Editor.svelte  Grammar.svelte  Guide.svelte  Nav.svelte
apps/chip/src/lib/data/: latex.ts
apps/chip/src/routes/api/challenge/: +server.ts
apps/chip/src/routes/api/input/: +server.ts
apps/chip/src/routes/chip/: +page.svelte  +server.ts
apps/chip/src/routes/chip/exercises/: exercise1.txt  exercise1s.txt  exercise2.txt  exercise2s.txt  exercise3.txt  exercise3s.txt  exercise4.txt  exercise4s.txt  exercise5.txt  solutions.gcl
apps/chip/src/routes/chip/prewritten_loops/: exercise1.txt  exercise1s.txt  exercise2.txt  exercise2s.txt  exercise3.txt  exercise3s.txt  exercise4.txt  exercise4s.txt  exercise5.txt  exercise5s.txt  exercise6.txt  exercise6s.txt  (+4 more)
apps/chip/src/routes/guide/: +page.svelte
apps/inspectify/src/lib/: api.ts
crates/ce-core/: Cargo.toml
crates/ce-core/src/gn/: gcl_gen.rs
crates/ce-shell/: Cargo.toml
crates/ce-shell/src/: lib.rs
crates/chip/: Cargo.toml
crates/chip-cli/: Cargo.toml
crates/chip-wasm/src/: lib.rs
crates/chip/src/: annotate.rs  lib.rs
crates/envs/ce-capwords/: Cargo.toml
crates/envs/ce-capwords/src/: lib.rs
crates/envs/ce-eqsolve/: Cargo.toml
crates/envs/ce-eqsolve/src/: lib.rs
crates/gcl/: Cargo.toml
crates/gcl/src/: annotater.rs  fmt.rs  lib.rs  pg.rs
crates/inspectify/: Cargo.toml
crates/inspectify/src/: endpoints.rs
crates/stdx/: Cargo.toml
crates/stdx/src/: lib.rs
(+2 files in other folders)
