[package]
name = "chip"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
indexmap.workspace = true
itertools.workspace = true
lalrpop-util.workspace = true
mcltl.workspace = true
miette.workspace = true
once_cell.workspace = true
serde.workspace = true
smtlib.workspace = true
thiserror.workspace = true
tracing.workspace = true
ce-core = { workspace = true, optional = true }
gcl = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[features]
default = []
generate = ["ce-core", "gcl", "rand"]

[build-dependencies]
lalrpop.workspace = true
